--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "helmet": "^4.0.0",
     "mocha": "^8.1.1",
@@ -22,6 +23,14 @@
     "mongoose": "^5.9.28"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.0.5"
   }
 }
