--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "helmet": "^4.0.0",
     "mocha": "^8.1.1",
     "mongodb": "^3.6.0",
-    "mongoose": "^5.9.28"
+    "mongoose": "^5.9.28",
+    "pug": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^7.2.0",
