--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "helmet": "^4.0.0",
     "mocha": "^8.1.1",
+    "moment": "^2.27.0",
     "mongodb": "^3.6.0",
     "mongoose": "^5.9.28",
     "pug": "^3.0.0"
