--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "author": "Kelvin Sanchez",
   "license": "ISC",
+  "engines": {
+    "node": ">=8.3.0"
+  },
   "dependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
